--- a/app/src/main/res/layout/activity_huilv.xml
+++ b/app/src/main/res/layout/activity_huilv.xml
@@ -15,9 +15,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:text="Input RMB"
+        android:hint="Input RMB"
         android:textSize="50dp"
-        android:gravity="center" />
+        android:gravity="center"
+        />
 
     <TextView
         android:id="@+id/output"
@@ -50,4 +51,12 @@
         android:textSize="30dp"
         android:text="WON"
         android:onClick="Click"/>
+
+    <Button
+        android:id="@+id/CONFIG"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="CONFIG"
+        android:onClick="openOne"/>
 </LinearLayout>
